6.0 5 Feb 12
    Total rewrite in .Net Framework 4.0
    Added main form resizing
    Added programming features

5.0 24 May 08 (never published)
    C# version with overloaded math operators

4.5 29 May 07 (never published)
    Added ability to resize/rescale the main form

4.1 29 Oct 05
    Converted to VB.Net 2.0

4.0 14 Jul 02
    Converted to VB.Net v1.1

3.0 26 Jun 01
    Major rewrite to add Graphical background/buttons, menus, etc

2.0 10 Mar 99
    rewritten in VB6

1.0 3 Apr 95
    Written in 16-bit Borland C