@@ -1,0 +1,8 @@
+<component name="ArtifactManager">
+  <artifact type="jar" name="JRPN_Java:jar">
+    <output-path>$PROJECT_DIR$/out/artifacts/JRPN_Java_jar</output-path>
+    <root id="archive" name="JRPN_Java.jar">
+      <element id="module-output" name="JRPN_Java" />
+    </root>
+  </artifact>
+</component>
