@@ -1,8 +1,0 @@
-<component name="ArtifactManager">
-  <artifact type="jar" name="WRPN_Java:jar">
-    <output-path>$PROJECT_DIR$/out/artifacts/WRPN_Java_jar</output-path>
-    <root id="archive" name="WRPN_Java.jar">
-      <element id="module-output" name="WRPN_Java" />
-    </root>
-  </artifact>
-</component>
