@@ -1,3 +1,3 @@
 Manifest-Version: 1.0
-Main-Class: com.emmetgray.wrpn.fmMain
+Main-Class: com.jovial.jrpn.fmMain
 
