@@ -16,7 +16,7 @@
  */
 
 
-package com.emmetgray.wrpn;
+package com.jovial.jrpn;
 
 import java.awt.*;
 
