@@ -3,7 +3,7 @@
 <Form version="1.3" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
-    <Property name="title" type="java.lang.String" value="About WRPN"/>
+    <Property name="title" type="java.lang.String" value="About JRPN"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -108,14 +108,14 @@
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/com/emmetgray/wrpn/resources/WRPN_small.png"/>
+          <Image iconType="3" name="/com/jovial/jrpn/resources/JRPN_small.png"/>
         </Property>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/com/emmetgray/wrpn/resources/Egray_small.png"/>
+          <Image iconType="3" name="/com/jovial/jrpn/resources/Egray_small.png"/>
         </Property>
       </Properties>
     </Component>
@@ -132,7 +132,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="36" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="WRPN"/>
+        <Property name="text" type="java.lang.String" value="JRPN"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel4">
