@@ -1,4 +1,4 @@
-package com.emmetgray.wrpn;
+package com.jovial.jrpn;
 
 import java.util.logging.Level;
 import java.util.logging.Logger;
@@ -43,11 +43,11 @@ public class fmAbout extends javax.swing.JFrame {
         lbEmail = new javax.swing.JLabel();
 
         setDefaultCloseOperation(javax.swing.WindowConstants.DISPOSE_ON_CLOSE);
-        setTitle("About WRPN");
+        setTitle("About JRPN");
 
-        jLabel1.setIcon(new javax.swing.ImageIcon(getClass().getResource("/com/emmetgray/wrpn/resources/JRPN_small.png"))); // NOI18N
+        jLabel1.setIcon(new javax.swing.ImageIcon(getClass().getResource("/com/jovial/jrpn/resources/JRPN_small.png"))); // NOI18N
 
-        jLabel2.setIcon(new javax.swing.ImageIcon(getClass().getResource("/com/emmetgray/wrpn/resources/Egray_small.png"))); // NOI18N
+        jLabel2.setIcon(new javax.swing.ImageIcon(getClass().getResource("/com/jovial/jrpn/resources/Egray_small.png"))); // NOI18N
 
         jButton1.setText("OK");
         jButton1.addActionListener(new java.awt.event.ActionListener() {
@@ -57,7 +57,7 @@ public class fmAbout extends javax.swing.JFrame {
         });
 
         jLabel3.setFont(new java.awt.Font("Tahoma", 1, 36)); // NOI18N
-        jLabel3.setText("WRPN");
+        jLabel3.setText("JRPN");
 
         jLabel4.setText("Windows Reverse Polish Notation Calculator 16C");
 
